Fix image size on mobile

--- a/public/stylesheets/fun-facts.css
+++ b/public/stylesheets/fun-facts.css
@@ -5,6 +5,11 @@
         width: 100%;
         font-size: 4.5vw;
     }
+
+    img#card-players {
+        max-width: 100%;
+        height: auto;
+    }
 }
 
 /* Larger screens */
@@ -12,6 +17,13 @@
     button.fun {
         width: 100%;
         font-size: 1.8vw;
+    }
+
+    img#card-players {
+        float: right;
+        max-width: 20%;
+        height: auto;
+        padding: 0 15px;
     }
 }
 
@@ -35,11 +47,4 @@ div.fun-content {
     text-justify: inter-word;
     text-indent: 30px;
     line-height: 1.5;
-}
-
-img#card-players {
-    float: right;
-    max-width: 20%;
-    height: auto;
-    padding: 0 15px;
 }
